<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".HomeItems.Home">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/main_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            tools:context=".Login">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="363dp"
                    android:layout_height="282dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginBottom="36dp"
                    android:padding="15dp"
                    android:src="@drawable/insertimage" />


                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="320dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/select"
                        android:layout_width="138dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/btnoutlinedesign"
                        android:drawableBottom="@drawable/ic_cambar"
                        android:text="@string/home_select"
                        android:textColor="#446d54"

                        />

                    <Button
                        android:id="@+id/upload"
                        android:layout_width="138dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="45dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btnoutlinedesign"
                        android:drawableBottom="@drawable/ic_upload"
                        android:text="@string/home_upload"
                        android:textColor="#446d54" />


                </LinearLayout>

                <TextView
                    android:id="@+id/textviewdisease"
                    android:layout_width="381dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="420dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/btnoutlinedesign"
                    android:shadowColor="#446D54"
                    android:text="@string/home_disease"
                    android:textAlignment="center"
                    android:textColor="#446D54"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/disease"
                    android:layout_width="381dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textviewdisease"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/textviewdesign_dottedwithcolor"
                    android:text="@string/home_no_output"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textviewtreatment"
                    android:layout_width="381dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/disease"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/btnoutlinedesign"
                    android:shadowColor="#446D54"
                    android:text="@string/home_treatment"
                    android:textAlignment="center"
                    android:textColor="#446D54"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/treatment"
                    android:layout_width="381dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textviewtreatment"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/textviewdesign_dottedwithcolor"
                    android:text="@string/home_no_output"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textviewclinic"
                    android:layout_width="381dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/treatment"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/btnoutlinedesign"
                    android:shadowColor="#446D54"
                    android:text="@string/home_clinic_center"
                    android:textAlignment="center"
                    android:textColor="#446D54"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cliniccenter"
                    android:layout_width="381dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textviewclinic"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/textviewdesign_dottedwithcolor"
                    android:text="@string/home_no_output"
                    android:textAlignment="center"
                    android:textSize="16sp" />

            </RelativeLayout>



        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>