<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF7F7"
    tools:context=".Crop">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crop_crop_information"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="313dp"
        android:layout_height="360dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spstate"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/spiner_farm_name"
            android:inputType="textPersonName"
            android:padding="17dp" />

        <Spinner
            android:id="@+id/sptype"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="17dp" />

        <Spinner
            android:id="@+id/spcropname"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="17dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btDone"
        android:layout_width="122dp"
        android:layout_height="58dp"
        android:background="@drawable/background_btn"
        android:onClick="Done"
        android:text="@string/crop_done"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

</androidx.constraintlayout.widget.ConstraintLayout>